Add proper doc link

--- a/platformio.ini
+++ b/platformio.ini
@@ -5,6 +5,7 @@ src_dir = etherkey
 ; This firmware needs to have a USB mode set where there's a "Keyboard" object.
 ; That seems to be only USB_HID, USB_SERIAL_HID and USB_KEYBOARDONLY.
 ; I've picked one mode here, but not sure if it's correct.
+; see https://docs.platformio.org/en/latest/platforms/teensy.html#usb-features
 build_flags =
   -DUSB_SERIAL_HID
 
